fixed homepage whitespace and settings formatting

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
 
 }
 
+#root {
+  height: 100%;
+}
+
 html,body{
   height: 100%;
   width: 100%;
